Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-11834

Iceberg LOAD DATA hdfsDelete can crash JVM

    XMLWordPrintableJSON

Details

    • ghx-label-2

    Description

      It is probably caused by the incorrectly initialising the hdfsFS object before executing the delete. 

      hdfsDelete(path=s3a://bucket-external/path/to/table/icebergtable1/.tmp_8cd3828f-27dd-4d49-be7a-4453207ecfb7, recursive=1): FileSystem#delete error:IllegalArgumentException: Wrong FS s3a://bucket-external//path/to/table/icebergtable1/.tmp_8cd3828f-27dd-4d49-be7a-4453207ecfb7 -expected s3a://bucket-managed    at org.apache.hadoop.fs.s3native.S3xLoginHelper.checkPath(S3xLoginHelper.java:224)    at org.apache.hadoop.fs.s3a.S3AFileSystem.checkPath(S3AFileSystem.java:1375)    at org.apache.hadoop.fs.FileSystem.makeQualified(FileSystem.java:647)    at org.apache.hadoop.fs.s3a.S3AFileSystem.makeQualified(S3AFileSystem.java:1337)    at org.apache.hadoop.fs.s3a.S3AFileSystem.qualify(S3AFileSystem.java:1363)    at org.apache.hadoop.fs.s3a.S3AFileSystem.delete(S3AFileSystem.java:3132) 

      Attachments

        Activity

          People

            tmate Tamas Mate
            riddhi.jain Riddhi jain
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: