IMPALA-11834: Fix Iceberg LOAD DATA hdfsDelete JVM crash

The LOAD DATA statement could crash the JVM when there were differences
between the 'fs.defaultFS' and loaded paths. This happened because the
hdfsFS object was initialized with the default FS instead of the correct
ones for the paths.

This commit fixes the hdfsFS object initialization.

Testing:
 - Ran the existing tests locally.

Change-Id: Ifb8f6ebf5b7100e69c1b02137d03fe70c331c30f
Reviewed-on: http://gerrit.cloudera.org:8080/19410
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>